updated packages, fix ts types

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ bt.dat
 /client_packages/*
 /app/cef/node_modules/*
 /app/cef/dist/*
+/app/server/node_modules/*
+/app/client/node_modules/*
+/encryption_keys/*
+/source_dlcpacks
